# xapian-evaluation

./: .gitignore  .travis.yml  AUTHORS  Makefile  Makefile.gzip  Makefile.in  P98_gzip.h  README  README.md  aclocal.m4  config  config.h  config.h.in  config.status  config_file.cc  config_file.h  configure  configure.ac  configure.ac.bk  configure.scan  gzip.h  htmlparse.cc  index-xapian-trec.cc  indextext.h  inflate.c  libtool  qrelinmemory.cc  qrelinmemory.h  split.cc  split.h  stopword.cc  stopword.h  timer.c  timer.h  timer.oo  timerstruct.h  trec_adhoceval.cc  trec_adhoceval.h  trec_eval.cc  trec_eval.h  (+8 more)
.github/workflows/: ci.yml
autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
src/: Makefile  Makefile.am  Makefile.in  P98_gzip.h  config.h  config_file.cc  config_file.h  gzip.c  htmlparse.cc  index-xapian-trec.cc  indextext.h  qrelinmemory.cc  qrelinmemory.h  split.cc  split.h  stopword.cc  stopword.h  timer.c  timer.cpp  timer.h  timerstruct.h  trec_adhoceval  trec_adhoceval.cc  trec_adhoceval.h  trec_eval.h  trec_index.cc  trec_qrel.cc  trec_qrel.h  trec_query.cc  trec_search.cc  unzip.c  util.c  xapian-trec.cc
src/.deps/: config_file.Po  gzip.Po  htmlparse.Po  inflate.Po  qrelinmemory.Po  split.Po  stopword.Po  timer.Po  trec_adhoceval.Po  trec_index.Po  trec_qrel.Po  trec_query.Po  trec_search.Po  unlzh.Po  unlzw.Po  unpack.Po  unzip.Po  util.Po
